# claude-command-center

./: .gitignore  CCC-PRD-AUDIT.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.beads/: issues.jsonl
.github/: FUNDING.yml
.github/workflows/: ci.yml
.ralph-tui/: config.toml  session-meta.json
config/: datastore.py  schema.sql
dashboard/: claude-command-center.html  command-center-template.html  presentation.html
deploy/: com.claude.api-server.plist
scripts/: backfill-autonomy-streaks.py  ccc-api-server.py  ccc-autonomous-brain.py  ccc-autopilot.py  ccc-backup.py  ccc-generator.sh  ccc-intelligence-layer.py  ccc-migrate-to-sqlite.py  ccc-self-heal.py  ccc-sql-data.py  ccc-watchdog.py  dashboard-sql-loader.py  fix-all-dashboard-data.py  integrate-untracked-data.py  sqlite-to-jsonl-sync.py
tasks/: prd-ccc-ground-truth-upgrade.md  prd-data-intelligence-upgrade.json  prd-data-intelligence-upgrade.md  prd.json
tests/: conftest.py  test_api_endpoints.py  test_backup.py  test_brain_intel.py  test_datastore.py  test_self_heal.py  test_sql_data.py
